I blame Alicia. Localstorage now recorded. Improved highlighting of input boxes when not filled in.

--- a/styles.css
+++ b/styles.css
@@ -59,6 +59,6 @@ body.show-floater .overlay {
     font-size: 14px;
 }
 
-.has-error input[type=text] {
+.has-error-url input[type=text], .has-error-desc input[type=text] {
     background-color: #FFCCCC;
 }
